Removed uneeded NMS code Code refactoring